--- a/public/index.html
+++ b/public/index.html
@@ -1233,8 +1233,6 @@
   
 
   
-  <script src="https://cdn1.lncld.net/static/js/av-core-mini-0.6.4.js"></script>
-  <script>AV.initialize("LeCCA66dGbzxtMavj7NlVbse-gzGzoHsz", "CYkvXYm3VIVgVQFdr17i3z0u");</script>
   <script>
     function showTime(Counter) {
       var query = new AV.Query(Counter);
@@ -1247,7 +1245,7 @@
 
       query.containedIn('url', entries);
       query.find()
-        .done(function (results) {
+        .then(function (results) {
           var COUNT_CONTAINER_REF = '.leancloud-visitors-count';
 
           if (results.length === 0) {
@@ -1271,8 +1269,7 @@
               countSpan.text(0);
             }
           }
-        })
-        .fail(function (object, error) {
+        },function (object, error) {
           console.log("Error: " + error.code + " " + error.message);
         });
     }
@@ -1284,20 +1281,17 @@
       var query = new AV.Query(Counter);
 
       query.equalTo("url", url);
-      query.find({
-        success: function(results) {
+      query.find().then(
+        function(results) {
           if (results.length > 0) {
             var counter = results[0];
             counter.fetchWhenSave(true);
             counter.increment("time");
-            counter.save(null, {
-              success: function(counter) {
-                var $element = $(document.getElementById(url));
-                $element.find('.leancloud-visitors-count').text(counter.get('time'));
-              },
-              error: function(counter, error) {
-                console.log('Failed to save Visitor num, with error message: ' + error.message);
-              }
+            counter.save().then(function(counter) {
+              var $element = $(document.getElementById(url));
+              $element.find('.leancloud-visitors-count').text(counter.get('time'));
+            },function(counter, error) {
+              console.log('Failed to save Visitor num, with error message: ' + error.message);
             });
           } else {
             var newcounter = new Counter();
@@ -1321,10 +1315,10 @@
             });
           }
         },
-        error: function(error) {
+        function(error) {
           console.log('Error:' + error.code + " " + error.message);
         }
-      });
+      );
     }
 
     $(function() {
